--- a/DockerFiles/Mysql/Dockerfile
+++ b/DockerFiles/Mysql/Dockerfile
@@ -3,6 +3,5 @@ FROM percona
 MAINTAINER Alireza Rahmani Khalili "alirezarahmani@live.com"
 
 ENV TERM xterm
-
+RUN mkdir /etc/mysql/conf.d
 ADD my.cnf /etc/mysql/my.cnf
-ADD query.sql /docker-entrypoint-initdb.d
