--- a/DockerFiles/Worker/Dockerfile
+++ b/DockerFiles/Worker/Dockerfile
@@ -23,6 +23,7 @@ RUN DEBIAN_FRONTEND="noninteractive" apt-get update && apt-get install -y --forc
     php7.4-json \
     php7.4-mysql \
     php7.4-intl \
+    php7.4-redis \
     php7.4-mbstring \
     php-memcached \
     git \
